--- a/assets/styles.css
+++ b/assets/styles.css
@@ -31,6 +31,9 @@ button {
 	font-weight: 600;
 	border: 0;
 	justify-content: center;
+	align-items: center;
+	background-color: transparent;
+	padding: 0;
 }
 
 body {
