--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,6 @@
 :root {
 	--clr-red: 14 86% 42%;
+	--clr-red-dark: 14 85% 32%;
 	--clr-green: 159 69% 38%;
 
 	--clr-neutral-100: 20 50% 98%;
@@ -34,6 +35,7 @@ button {
 	align-items: center;
 	background-color: transparent;
 	padding: 0;
+	outline: none;
 }
 
 body {
