--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,7 +26,7 @@ picture {
 }
 
 button {
-	font-family: inherit;
+	font: inherit;
 	cursor: pointer;
 	display: inline-flex;
 	font-weight: 600;
@@ -36,6 +36,12 @@ button {
 	background-color: transparent;
 	padding: 0;
 	outline: none;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 body {
